--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ composer.phar
 *.sql.backup
 
 # Configuration files (mantieni config.example.php)
-config/config.php
 config/database.php
 
 # Upload directories (mantieni la struttura ma non i file)
@@ -51,3 +50,6 @@ Thumbs.db
 error.log
 access.log
 debug.log
+
+# Local deploy config with FTP credentials
+scripts/deploy.config.php
